{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 72,
  "lineage": "ad85116d-c229-40a0-1b89-a797f39068ae",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-28T23:44:30.785-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/strategic-guru-280413/global/firewalls/strategic-guru-280413-fw-allow-http",
            "name": "strategic-guru-280413-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/global/networks/strategic-guru-280413-vpc",
            "priority": 1000,
            "project": "strategic-guru-280413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/global/firewalls/strategic-guru-280413-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-06-28T23:44:30.765-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/strategic-guru-280413/global/firewalls/strategic-guru-280413-fw-allow-internal",
            "name": "strategic-guru-280413-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/global/networks/strategic-guru-280413-vpc",
            "priority": 1000,
            "project": "strategic-guru-280413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/global/firewalls/strategic-guru-280413-fw-allow-internal",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-06-28T23:44:30.785-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/strategic-guru-280413/global/firewalls/strategic-guru-280413-fw-allow-ssh",
            "name": "strategic-guru-280413-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/global/networks/strategic-guru-280413-vpc",
            "priority": 1000,
            "project": "strategic-guru-280413",
            "self_link": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/global/firewalls/strategic-guru-280413-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_backend",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200618",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/zones/us-central1-c/disks/strategic-guru-280413-auto-server-6a004c61"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/strategic-guru-280413/zones/us-central1-c/instances/strategic-guru-280413-auto-server-6a004c61",
            "instance_id": "4889235684945310473",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "RXYQVu_nTIY=",
            "metadata_startup_script": "sudo apt update; sudo apt-get install git -y;git clone https://github.com/Pradeepv30/autoScripts.git; cd autoScripts;sudo chmod 777 docker-install.sh; ./docker-install.sh",
            "name": "strategic-guru-280413-auto-server-6a004c61",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.225.236.213",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/global/networks/strategic-guru-280413-vpc",
                "network_ip": "10.10.1.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/regions/us-central1/subnetworks/strategic-guru-280413-public-subnet-1",
                "subnetwork_project": "strategic-guru-280413"
              }
            ],
            "project": "strategic-guru-280413",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/zones/us-central1-c/instances/strategic-guru-280413-auto-server-6a004c61",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1",
            "random_id.instance_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/strategic-guru-280413/global/networks/strategic-guru-280413-vpc",
            "name": "strategic-guru-280413-vpc",
            "project": "strategic-guru-280413",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/global/networks/strategic-guru-280413-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-06-28T23:44:30.990-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/strategic-guru-280413/regions/us-central1/subnetworks/strategic-guru-280413-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "strategic-guru-280413-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/global/networks/strategic-guru-280413-vpc",
            "private_ip_google_access": false,
            "project": "strategic-guru-280413",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/strategic-guru-280413/regions/us-central1/subnetworks/strategic-guru-280413-public-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}